--- a/index-1.html
+++ b/index-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-<title>½ÌÓý¾­Àú</title>
+<title>æ•™è‚²ç»åŽ†</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,7 @@
         <div id="header-bg">
           <header>
             <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id="twitter"></a> <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp¼òµ¥& Æ½¾²& °®Éú»î</strong> </header>
+            <a href="#" id="twitter"></a> <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspç®€å•& å¹³é™& çˆ±ç”Ÿæ´»</strong> </header>
         </div>
         <!-- content -->
         <div id="content-bg">
@@ -86,27 +86,27 @@ High School in
                                 <article class="col-1">
                                   <h2 class="extra">Courses</h2>
                                   <dl class="list-2">
-                                  <p>ÎÒµÄ±¾¿ÆÉú½×¶ÎËùÐÞÖ÷Òª¿Î³ÌÓÐ:</p>
-					<li>¸ßµÈÊýÑ§</li>
-                                    	<li>ÏßÐÔ´úÊý</a></li>
-                                   	<li>¸ÅÂÊÂÛÓëÊýÀíÍ³¼Æ</li>
-<li>ÀëÉ¢ÊýÑ§</li>
-<li>C++³ÌÐòÉè¼ÆÓïÑÔ</li>
-<li>Êý¾Ý½á¹¹</li>
-<li>²Ù×÷ÏµÍ³</li>
-<li>¼ÆËã»ú×é³ÉÔ­Àí</li>
-<li>±àÒëÔ­Àí</li>
-<li>¼ÆËã»úÍøÂç</li>
+                                  <p>æˆ‘çš„æœ¬ç§‘ç”Ÿé˜¶æ®µæ‰€ä¿®ä¸»è¦è¯¾ç¨‹æœ‰:</p>
+					<li>é«˜ç­‰æ•°å­¦</li>
+                                    	<li>çº¿æ€§ä»£æ•°</a></li>
+                                   	<li>æ¦‚çŽ‡è®ºä¸Žæ•°ç†ç»Ÿè®¡</li>
+<li>ç¦»æ•£æ•°å­¦</li>
+<li>C++ç¨‹åºè®¾è®¡è¯­è¨€</li>
+<li>æ•°æ®ç»“æž„</li>
+<li>æ“ä½œç³»ç»Ÿ</li>
+<li>è®¡ç®—æœºç»„æˆåŽŸç†</li>
+<li>ç¼–è¯‘åŽŸç†</li>
+<li>è®¡ç®—æœºç½‘ç»œ</li>
 
                                   <div class="clear"></div>
                                 </article>
                                 <article class="col-2">
                                   <h2 class="extra">Research</h2>
-                                  <p>ÎÒµÄÑÐ¾¿Éú½×¶ÎÑÐ¾¿°üÀ¨µ«²»¾ÖÏÞÓÚ:</p>
+                                  <p>æˆ‘çš„ç ”ç©¶ç”Ÿé˜¶æ®µç ”ç©¶åŒ…æ‹¬ä½†ä¸å±€é™äºŽ:</p>
                                   <ul class="list">
-                                    <li>ÎÞÏß´«¸ÐÆ÷ÍøÂç</li>
-                                    <li>»ùÓÚRSSIµÄ¶¨Î»</a></li>
-                                    <li>ÖÇ»Û³ÇÊÐ</li>
+                                    <li>æ— çº¿ä¼ æ„Ÿå™¨ç½‘ç»œ</li>
+                                    <li>åŸºäºŽRSSIçš„å®šä½</a></li>
+                                    <li>æ™ºæ…§åŸŽå¸‚</li>
 
                                   </ul>
                                 </article>
