--- a/index-5.html
+++ b/index-5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-<title>ÁªÏµ·½Ê½</title>
+<title>è”ç³»æ–¹å¼</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,7 @@
         <div id="header-bg">
           <header>
             <h1><a href="index.html"><span></span></a></h1>
-            <a href="#" id="twitter"></a> <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp¼òµ¥& Æ½¾²& °®Éú»î</strong> </header>
+            <a href="#" id="twitter"></a> <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspç®€å•& å¹³é™& çˆ±ç”Ÿæ´»</strong> </header>
         </div>
         <!-- content -->
         <div id="content-bg">
@@ -66,12 +66,12 @@
                                 <div class="wrapper">
 
                                   <article class="col-1">
-                                    <p class="extra"><a href="http://www.seu.edu.cn/" target="_blank">¶«ÄÏ´óÑ§</a><br>
-                                      <a href="http://cse.seu.edu.cn/" target="_blank">¼ÆËã»ú¿ÆÑ§Óë¹¤³ÌÑ§Ôº</a><br>
-                                      <a href="http://cse.seu.edu.cn/labs/edulab/labsite//" target="_blank">¼ÆËã»úÍøÂçºÍĞÅÏ¢¼¯³É½ÌÓı²¿ÖØµãÊµÑéÊÒ</a><br>
-				      <br>½­ËÕÊ¡ÄÏ¾©ÊĞ½­ÄşÇø¶«ÄÏ´óÑ§Â·2ºÅ<br>
-					¼ÆËã»úÂ¥537<br>
-				      <br>ÓÊÕş±àÂë£º211189</br>
+                                    <p class="extra"><a href="http://www.seu.edu.cn/" target="_blank">ä¸œå—å¤§å­¦</a><br>
+                                      <a href="http://cse.seu.edu.cn/" target="_blank">è®¡ç®—æœºç§‘å­¦ä¸å·¥ç¨‹å­¦é™¢</a><br>
+                                      <a href="http://cse.seu.edu.cn/labs/edulab/labsite//" target="_blank">è®¡ç®—æœºç½‘ç»œå’Œä¿¡æ¯é›†æˆæ•™è‚²éƒ¨é‡ç‚¹å®éªŒå®¤</a><br>
+				      <br>æ±Ÿè‹çœå—äº¬å¸‚æ±Ÿå®åŒºä¸œå—å¤§å­¦è·¯2å·<br>
+					è®¡ç®—æœºæ¥¼537<br>
+				      <br>é‚®æ”¿ç¼–ç ï¼š211189</br>
 
 				    </p>
                                     <p> 
@@ -80,7 +80,7 @@
                                     <div class="clear"></div>
                                   </article>
                                   <article class="col-2">
-                                    <p class="extra"> <a href="http://cse.seu.edu.cn/labs/edulab/labsite//" target="_blank">Key Laboratory of Computer Network and Information Integration£¬Ministry of Education</a><br>
+                                    <p class="extra"> <a href="http://cse.seu.edu.cn/labs/edulab/labsite//" target="_blank">Key Laboratory of Computer Network and Information Integrationï¼ŒMinistry of Education</a><br>
                                       <a href="http://cse.seu.edu.cn/" target="_blank">School of Computer Science & Engineering</a><br>
 				      <a href="http://www.seu.edu.cn/" target="_blank">Southeast Univercity</a><br><br>
 					Room 537, Building of Computer<br>
@@ -94,7 +94,7 @@
 			      <div class="row-2">
                                 <div class="wrapper">
                                   <article class="col-1"> <a href="http://www.seu.edu.cn/" target="_blank"><img src="images/6page-img1.jpg" alt="" /></a><br></article>
-                                  <article class="col-2"> <a href="http://cse.seu.edu.cn/" target="_blank"><img src="images/6page-img1 - ¸±±¾.jpg" alt="" /></a></article>
+                                  <article class="col-2"> <a href="http://cse.seu.edu.cn/" target="_blank"><img src="images/6page-img1 - å‰¯æœ¬.jpg" alt="" /></a></article>
 
                                 </div>
                               </div>
@@ -103,7 +103,7 @@
                    		    <br><br><br>
                                     <h2 class="extra">Our Locations</h2>
                                     <ul class="list-4">
-                                      <li><iframe width="500" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=zh-CN&amp;geocode=&amp;q=%E6%B1%9F%E8%8B%8F%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;aq=&amp;sll=31.915928,118.827182&amp;sspn=0.099083,0.140419&amp;ie=UTF8&amp;hq=%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;hnear=%E4%B8%AD%E5%9B%BD%E6%B1%9F%E8%8B%8F%E7%9C%81%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E5%8C%BA&amp;t=m&amp;cid=69826398443676669&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=zh-CN&amp;geocode=&amp;q=%E6%B1%9F%E8%8B%8F%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;aq=&amp;sll=31.915928,118.827182&amp;sspn=0.099083,0.140419&amp;ie=UTF8&amp;hq=%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;hnear=%E4%B8%AD%E5%9B%BD%E6%B1%9F%E8%8B%8F%E7%9C%81%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E5%8C%BA&amp;t=m&amp;cid=69826398443676669&amp;z=12&amp;iwloc=A" style="color:#0000FF;text-align:left">²é¿´´óÍ¼</a></small></li>
+                                      <li><iframe width="500" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=zh-CN&amp;geocode=&amp;q=%E6%B1%9F%E8%8B%8F%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;aq=&amp;sll=31.915928,118.827182&amp;sspn=0.099083,0.140419&amp;ie=UTF8&amp;hq=%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;hnear=%E4%B8%AD%E5%9B%BD%E6%B1%9F%E8%8B%8F%E7%9C%81%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E5%8C%BA&amp;t=m&amp;cid=69826398443676669&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=zh-CN&amp;geocode=&amp;q=%E6%B1%9F%E8%8B%8F%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;aq=&amp;sll=31.915928,118.827182&amp;sspn=0.099083,0.140419&amp;ie=UTF8&amp;hq=%E4%B8%9C%E5%8D%97%E5%A4%A7%E5%AD%A6%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A5%BC&amp;hnear=%E4%B8%AD%E5%9B%BD%E6%B1%9F%E8%8B%8F%E7%9C%81%E5%8D%97%E4%BA%AC%E6%B1%9F%E5%AE%81%E5%8C%BA&amp;t=m&amp;cid=69826398443676669&amp;z=12&amp;iwloc=A" style="color:#0000FF;text-align:left">æŸ¥çœ‹å¤§å›¾</a></small></li>
                                       
                                     </ul>
                       
