--- a/index-6.html
+++ b/index-6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-<title>È¨ÀûÉùÃ÷</title>
+<title>æƒåˆ©å£°æ˜</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,7 @@
         <div id="header-bg">
           <header>
             <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id="twitter"></a> <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp¼òµ¥& Æ½¾²& °®Éú»î</strong> </header>
+            <a href="#" id="twitter"></a> <strong>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspç®€å•& å¹³é™& çˆ±ç”Ÿæ´»</strong> </header>
         </div>
         <!-- content -->
         <div id="content-bg">
@@ -62,8 +62,8 @@
                           <div class="inner">
                             <div class="privacy">
                               <h2 class="extra">Privacy Policy</h2>
-                              <p>±¾ÍøÕ¾ËùÁĞ³öÄÚÈİ£¬Î´¾­Ğí¿É£¬ÑÏ½û×ªÔØ£¡</p>
-                              <p>±¾ÍøÕ¾×îÖÕ½âÊÍÈ¨¹é <a href="index.html">¹ù³¿</a> ±¾ÈËËùÓĞ</p>
+                              <p>æœ¬ç½‘ç«™æ‰€åˆ—å‡ºå†…å®¹ï¼Œæœªç»è®¸å¯ï¼Œä¸¥ç¦è½¬è½½ï¼</p>
+                              <p>æœ¬ç½‘ç«™æœ€ç»ˆè§£é‡Šæƒå½’ <a href="index.html">éƒ­æ™¨</a> æœ¬äººæ‰€æœ‰</p>
                               <p class="no-indent">E-mail: <a href="#">guochen@seu.edu.cn</a></p>
                             </div>
                           </div>
