--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
               <div class="wrapper">
                 <div class="block-1">
                   <dl class="list-1">
-                    <dt>Guo Chen&copy; 2013</dt>
+                    <dt>
+                    	<script type="text/javascript">
+				<!-- Begin
+				copyright=new Date();//取得当前的日期
+				update=copyright.getFullYear();//取得当前的年份
+				document.write("Copyright &copy; 2008-"+ update + " All rights reserved.");//update 自动更新的年份
+//  End -->
+</script>
+                    </dt>
                     <dd><a href="index-6.html">Privacy policy</a></dd>
                   </dl>
                   <p>
