--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<!-- Begin
 				copyright=new Date();//取得当前的日期
 				update=copyright.getFullYear();//取得当前的年份
-				document.write("Copyright &copy; 2008-"+ update + " All rights reserved.");//update 自动更新的年份
+				document.write("Copyright &copy; 2008-"+ update + "\nAll rights reserved.");//update 自动更新的年份
 //  End -->
 </script>
                     </dt>
