--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
 				<!-- Begin
 				copyright=new Date();//取得当前的日期
 				update=copyright.getFullYear();//取得当前的年份
-				document.write("Copyright &copy; 2008-"+ update + "\nAll rights reserved.");//update 自动更新的年份
-//  End -->
-</script>
+				document.write("Copyright &copy; 2008-"+ update + "<br />All rights reserved.");//update 自动更新的年份
+			</script>
                     </dt>
                     <dd><a href="index-6.html">Privacy policy</a></dd>
                   </dl>
