--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-<title>郭晨 的个人主页</title>
+<title>Guo Chen</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
@@ -43,7 +43,7 @@
                     <ul>
                       <li class="act"><a href="index.html">home</a></li>
                       <li><a href="index-1.html">education</a></li>
-		      <li><a href="index-7.html">activity</a></li>
+					  <li><a href="index-7.html">activity</a></li>
                       <li><a href="index-2.html">honour</a></li>
                       <li><a href="index-3.html">project</a></li>
                       <li><a href="index-4.html">research</a></li>
@@ -70,6 +70,9 @@
 				<p>从幼儿园开始，我的记忆里我一直就是一个学生。幼儿园，小学，初中，高中，本科，研究生，一路走来，运气挺好，受益于自主招生和推荐免试研究生，没有经过太过痛苦的应试和选择</p>
 				<p>目前就读于东南大学计算机学院，是计算机网络方向的一名硕士研究生</p>
 				<p>暂时没有读博的打算，所以很快就要告别校园了，期待一份好的工作，期待一种新的生活</p>
+				<a href="guochen_zh.pdf" class="link"  target="_blank">My CV(zh-CN)&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                <a href="guochen_en.pdf" class="link"  target="_blank">My CV(en-US)</a>
+				<br /><br />
 
                               <div class="clear"></div>
                               <div class="wrapper">
