--- a/index-1.html
+++ b/index-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-<title>教育经历</title>
+<title>guochen's education</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
