--- a/index-2.html
+++ b/index-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-<title>所获荣誉</title>
+<title>guochen's honour</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
