--- a/index-4.html
+++ b/index-4.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="zh">
 <head>
-<title>科研活动</title>
+<title>guochen's research</title>
 <meta charset="gb2312">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
